--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,7 +4,6 @@ on:
   push:
     branches: [ master ]
   pull_request:
-    branches: [ master ]
 
 jobs:
   build:
@@ -12,20 +11,13 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2
+      - uses: purescript-contrib/setup-purescript@main
+        # with:
+        #   purescript: "latest"
+        #   spago: "latest"
 
-      - name: Set up a PureScript toolchain
-        uses: purescript-contrib/setup-purescript@main
-
-      # - name: Cache NPM dependencies
-      #   uses: actions/cache@v2
-      #   with:
-      #     key: ${{ runner.os }}-lerna-${{ hashFiles('**/package.json', '**/yarn.lock') }}
-      #     path: |
-      #       node_modules
-      #       */*/node_modules
-
-      - name: Cache PureScript dependencies
-        uses: actions/cache@v2
+      - uses: actions/cache@v2
         with:
           key: ${{ runner.os }}-spago-${{ hashFiles('**/*.dhall') }}
           path: |
@@ -33,11 +25,10 @@ jobs:
             output
 
       - name: Install dependencies
-        run: |
-          spago install
+        run: spago install
 
       - name: Build source
         run: spago build --no-install --purs-args '--censor-lib --strict'
 
-      # - name: Run tests
-      #   run: spago test
+      - name: Run tests
+        run: spago test
